<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardUseCompatPadding="false"
                card_view:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:hint="@string/name_login_lbl"
                        android:inputType="textPersonName"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:padding="10dp"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:hint="@string/email_login_lbl"
                        android:inputType="textEmailAddress"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:hint="@string/phone_login_lbl"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <EditText
                        android:id="@+id/edt_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:hint="@string/subject"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:textCursorDrawable="@drawable/cursor_black" />


                    <EditText
                        android:id="@+id/edt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:textCursorDrawable="@drawable/cursor_black"
                        android:lines="5"/>

                    <Button
                        android:id="@+id/btn_submit"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_yellow_button"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/submit"
                        android:textColor="@color/white" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>