<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/ContainerSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_latest_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/featured"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:layout_width="35dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/txt_latest_home"
                    android:background="@color/yellow" />

                <Button
                    android:id="@+id/btn_latest"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/yellow_button"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/more"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <RelativeLayout
                android:id="@+id/lyt_recent_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txt_featured_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_latest"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:layout_width="35dp"
                    android:layout_height="2dp"
                    android:layout_below="@+id/txt_featured_home"
                    android:layout_marginTop="5dp"
                    android:background="@color/yellow" />

                <Button
                    android:id="@+id/btn_featured"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/yellow_button"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/more"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_featured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>