<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adview"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/ContainerGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-94dp"
                android:orientation="vertical"
                android:padding="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="60dp"
                        card_view:cardCornerRadius="2dp"
                        card_view:cardUseCompatPadding="false"
                        card_view:elevation="5dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/textPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/no_item_found"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textBed"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_bed"
                                    android:drawablePadding="5dp"
                                    android:singleLine="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/detail" />

                                <TextView
                                    android:id="@+id/textBath"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="10dp"
                                    android:drawableStart="@drawable/ic_bath"
                                    android:drawablePadding="5dp"
                                    android:singleLine="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/detail" />

                                <TextView
                                    android:id="@+id/textArea"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_sf"
                                    android:drawablePadding="5dp"
                                    android:singleLine="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/detail" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <com.github.ornolfr.ratingview.RatingView
                                        android:id="@+id/ratingView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentEnd="true"
                                        card_view:drawable_empty="@drawable/ic_star_empty"
                                        card_view:drawable_filled="@drawable/ic_star_filled"
                                        card_view:drawable_half="@drawable/ic_star_half"
                                        card_view:drawable_margin="2dp"
                                        card_view:drawable_size="15dp"
                                        card_view:is_indicator="true"
                                        card_view:max_count="5" />
                                </RelativeLayout>

                            </LinearLayout>

                            <TextView
                                android:id="@+id/textPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:drawableStart="@drawable/ic_call_small"
                                android:drawablePadding="5dp"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/detail" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@color/line" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/property_desc"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorPrimary" />

                            <View
                                android:layout_width="40dp"
                                android:layout_height="2dp"
                                android:layout_marginTop="3dp"
                                android:background="@color/yellow" />

                            <WebView
                                android:id="@+id/property_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@color/line" />

                            <TextView
                                android:id="@+id/txtAmenities"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/property_amenities"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorPrimary" />

                            <View
                                android:id="@+id/viewAmenities"
                                android:layout_width="40dp"
                                android:layout_height="2dp"
                                android:layout_marginTop="3dp"
                                android:background="@color/yellow" />

                            <FrameLayout
                                android:id="@+id/ContainerAmenities"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp" />

                            <View
                                android:id="@+id/viewAmenities1"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:background="@color/line" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/property_floor_plan"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorPrimary" />

                            <View
                                android:layout_width="40dp"
                                android:layout_height="2dp"
                                android:layout_marginTop="3dp"
                                android:background="@color/yellow" />

                            <ImageView
                                android:id="@+id/image_floor"
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:layout_marginBottom="15dp"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@string/app_name" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                    <ImageView
                        android:id="@+id/imageMap"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/circle_yellow"
                        android:contentDescription="@string/app_name"
                        android:elevation="10dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_location_on_white_24dp" />

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:singleLine="true"
                        android:text="@string/no_item_found"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="5dp"
                        android:text="@string/no_item_found"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:layout_toStartOf="@+id/imageMap"
                        android:maxLines="2"
                        />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

    </LinearLayout>
</RelativeLayout>